@@ -39,7 +39,6 @@ import com.jetbrains.youtrackdb.internal.common.types.ModifiableBoolean;
 import com.jetbrains.youtrackdb.internal.common.util.RawPair;
 import com.jetbrains.youtrackdb.internal.core.YouTrackDBConstants;
 import com.jetbrains.youtrackdb.internal.core.YouTrackDBEnginesManager;
-import com.jetbrains.youtrackdb.internal.core.command.CommandOutputListener;
 import com.jetbrains.youtrackdb.internal.core.config.ContextConfiguration;
 import com.jetbrains.youtrackdb.internal.core.config.IndexEngineData;
 import com.jetbrains.youtrackdb.internal.core.config.StorageCollectionConfiguration;
@@ -102,7 +101,6 @@ import com.jetbrains.youtrackdb.internal.core.storage.cache.local.BackgroundExce
 import com.jetbrains.youtrackdb.internal.core.storage.collection.PaginatedCollection;
 import com.jetbrains.youtrackdb.internal.core.storage.collection.PaginatedCollection.RECORD_STATUS;
 import com.jetbrains.youtrackdb.internal.core.storage.config.CollectionBasedStorageConfiguration;
-import com.jetbrains.youtrackdb.internal.core.storage.impl.local.paginated.StorageTransaction;
 import com.jetbrains.youtrackdb.internal.core.storage.impl.local.paginated.atomicoperations.AtomicOperation;
 import com.jetbrains.youtrackdb.internal.core.storage.impl.local.paginated.atomicoperations.AtomicOperationsManager;
 import com.jetbrains.youtrackdb.internal.core.storage.impl.local.paginated.atomicoperations.AtomicOperationsTable;
@@ -137,6 +135,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.file.Path;
+import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -156,6 +155,7 @@ import java.util.TimeZone;
 import java.util.TreeMap;
 import java.util.TreeSet;
 import java.util.UUID;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ScheduledExecutorService;
@@ -184,8 +184,7 @@ public abstract class AbstractStorage
     IdentifiableStorage,
     BackgroundExceptionListener,
     FreezableStorageComponent,
-    PageIsBrokenListener,
-    Storage {
+    PageIsBrokenListener {
 
   private static final Logger logger = LoggerFactory.getLogger(AbstractStorage.class);
   private static final int WAL_RESTORE_REPORT_INTERVAL = 30 * 1000; // milliseconds
@@ -229,7 +228,6 @@ public abstract class AbstractStorage
   private final Map<String, StorageCollection> collectionMap = new HashMap<>();
   private final List<StorageCollection> collections = new CopyOnWriteArrayList<>();
 
-  private volatile ThreadLocal<StorageTransaction> transaction;
   private final AtomicBoolean walVacuumInProgress = new AtomicBoolean();
 
   protected volatile WriteAheadLog writeAheadLog;
@@ -269,7 +267,7 @@ public abstract class AbstractStorage
 
   protected volatile STATUS status = STATUS.CLOSED;
 
-  protected AtomicReference<Throwable> error = new AtomicReference<>(null);
+  protected final AtomicReference<Throwable> error = new AtomicReference<>(null);
   protected YouTrackDBInternalEmbedded context;
   private volatile CountDownLatch migration = new CountDownLatch(1);
 
@@ -278,6 +276,9 @@ public abstract class AbstractStorage
   private final Stopwatch dropDuration;
   private final Stopwatch synchDuration;
   private final Stopwatch shutdownDuration;
+
+  // Tracking active transactions, should be used for unreachable record versions cleanup
+  protected Map<Long, FrontendTransaction> transactionsTracker = new ConcurrentHashMap<>();
 
   public AbstractStorage(
       final String name, final String filePath, final int id,
@@ -341,9 +342,69 @@ public abstract class AbstractStorage
     return name;
   }
 
-  @Override
   public String getURL() {
     return url;
+  }
+
+  public ContextConfiguration getContextConfiguration() {
+    return configuration.getContextConfiguration();
+  }
+
+  public String getSchemaRecordId() {
+    return configuration.getSchemaRecordId();
+  }
+
+  public String getCharset() {
+    return configuration.getCharset();
+  }
+
+  public String getIndexMgrRecordId() {
+    return configuration.getIndexMgrRecordId();
+  }
+
+  @Nullable
+  public TimeZone getTimeZone() {
+    return configuration.getTimeZone();
+  }
+
+  public SimpleDateFormat getDateFormatInstance() {
+    return configuration.getDateFormatInstance();
+  }
+
+  public String getDateFormat() {
+    return configuration.getDateFormat();
+  }
+
+  public String getDateTimeFormat() {
+    return configuration.getDateTimeFormat();
+  }
+
+  public SimpleDateFormat getDateTimeFormatInstance() {
+    return configuration.getDateTimeFormatInstance();
+  }
+
+  public String getRecordSerializer() {
+    return configuration.getRecordSerializer();
+  }
+
+  public int getRecordSerializerVersion() {
+    return configuration.getRecordSerializerVersion();
+  }
+
+  public String getLocaleCountry() {
+    return configuration.getLocaleCountry();
+  }
+
+  public String getLocaleLanguage() {
+    return configuration.getLocaleLanguage();
+  }
+
+  public int getMinimumCollections() {
+    return configuration.getMinimumCollections();
+  }
+
+  public boolean isValidationEnabled() {
+    return configuration.isValidationEnabled();
   }
 
   @Override
@@ -357,6 +418,19 @@ public abstract class AbstractStorage
               + " is bigger than amount of open sessions");
     }
     lastCloseTime = System.currentTimeMillis();
+  }
+
+  private void closeIfPossible() {
+    while (true) {
+      var sessions = sessionCount.get();
+      if (sessions < 0) {
+        return;
+      }
+      if (sessionCount.compareAndSet(sessions, sessions - 1)) {
+        lastCloseTime = System.currentTimeMillis();
+        return;
+      }
+    }
   }
 
   public long getSessionsCount() {
@@ -376,9 +450,11 @@ public abstract class AbstractStorage
   public long countRecords(DatabaseSessionEmbedded session) {
     long tot = 0;
 
+    var transaction = session.getActiveTransaction();
+    var atomicOperation = transaction.getAtomicOperation();
     for (var c : getCollectionInstances()) {
       if (c != null) {
-        tot += c.getEntries() - c.getTombstonesCount();
+        tot += c.getEntries(atomicOperation) - c.getTombstonesCount();
       }
     }
 
@@ -515,7 +591,6 @@ public abstract class AbstractStorage
           readIv();
 
           initWalAndDiskCache(contextConfiguration);
-          transaction = new ThreadLocal<>();
 
           final var startupMetadata = checkIfStorageDirty();
           final var lastTxId = startupMetadata.lastTxId;
@@ -557,14 +632,18 @@ public abstract class AbstractStorage
                 this.uuid = UUID.fromString(uuid);
               });
 
-          checkPageSizeAndRelatedParameters();
+          var binaryFormatVersion =
+              atomicOperationsManager.calculateInsideAtomicOperation(
+                  configuration::getBinaryFormatVersion);
+          componentsFactory = new CurrentStorageComponentsFactory(binaryFormatVersion);
 
-          componentsFactory = new CurrentStorageComponentsFactory(configuration);
+          atomicOperationsManager.executeInsideAtomicOperation(
+              this::checkPageSizeAndRelatedParameters);
 
-          linkCollectionsBTreeManager.load();
+          atomicOperationsManager.executeInsideAtomicOperation(linkCollectionsBTreeManager::load);
 
           atomicOperationsManager.executeInsideAtomicOperation(this::openCollections);
-          openIndexes();
+          atomicOperationsManager.executeInsideAtomicOperation(this::openIndexes);
 
           atomicOperationsManager.executeInsideAtomicOperation(
               (atomicOperation) -> {
@@ -678,28 +757,28 @@ public abstract class AbstractStorage
     return configuration.getCreatedAtVersion();
   }
 
-  protected final void openIndexes() {
+  protected final void openIndexes(AtomicOperation atomicOperation) {
     final var cf = componentsFactory;
     if (cf == null) {
       throw new StorageException(name, "Storage '" + name + "' is not properly initialized");
     }
-    final var indexNames = configuration.indexEngines();
+    final var indexNames = configuration.indexEngines(atomicOperation);
     var counter = 0;
 
     // avoid duplication of index engine ids
     for (final var indexName : indexNames) {
-      final var engineData = configuration.getIndexEngine(indexName, -1);
+      final var engineData = configuration.getIndexEngine(indexName, -1, atomicOperation);
       if (counter <= engineData.getIndexId()) {
         counter = engineData.getIndexId() + 1;
       }
     }
 
     for (final var indexName : indexNames) {
-      final var engineData = configuration.getIndexEngine(indexName, counter);
+      final var engineData = configuration.getIndexEngine(indexName, counter, atomicOperation);
 
       final var engine = Indexes.createIndexEngine(this, engineData);
 
-      engine.load(engineData);
+      engine.load(engineData, atomicOperation);
 
       indexEngineNameMap.put(engineData.getName(), engine);
       while (engineData.getIndexId() >= indexEngines.size()) {
@@ -720,8 +799,7 @@ public abstract class AbstractStorage
       final var collectionConfig = configurationCollections.get(i);
 
       if (collectionConfig != null) {
-        pos = createCollectionFromConfig(collectionConfig);
-
+        pos = createCollectionFromConfig(collectionConfig, atomicOperation);
         try {
           if (pos == -1) {
             collections.get(i).open(atomicOperation);
@@ -779,10 +857,10 @@ public abstract class AbstractStorage
         throw BaseException.wrapException(
             new StorageException(name, "Storage creation was interrupted"), e, name);
       } catch (final StorageException e) {
-        close(null);
+        closeIfPossible();
         throw e;
       } catch (final IOException e) {
-        close(null);
+        closeIfPossible();
         throw BaseException.wrapException(
             new StorageException(name, "Error on creation of storage '" + name + "'"), e, name);
       } finally {
@@ -850,7 +928,6 @@ public abstract class AbstractStorage
                 GlobalConfiguration.STORAGE_ATOMIC_OPERATIONS_TABLE_COMPACTION_LIMIT),
             idGen.getLastId() + 1);
     atomicOperationsManager = new AtomicOperationsManager(this, atomicOperationsTable);
-    transaction = new ThreadLocal<>();
 
     preCreateSteps();
     makeStorageDirty();
@@ -862,9 +939,11 @@ public abstract class AbstractStorage
               .create(atomicOperation, contextConfiguration);
           configuration.setUuid(atomicOperation, uuid.toString());
 
-          componentsFactory = new CurrentStorageComponentsFactory(configuration);
+          var binaryFormatVersion = atomicOperationsManager.calculateInsideAtomicOperation(
+              configuration::getBinaryFormatVersion);
+          componentsFactory = new CurrentStorageComponentsFactory(binaryFormatVersion);
 
-          linkCollectionsBTreeManager.load();
+          linkCollectionsBTreeManager.load(atomicOperation);
 
           status = STATUS.OPEN;
 
@@ -923,24 +1002,26 @@ public abstract class AbstractStorage
 
   protected abstract void initIv() throws IOException;
 
-  private void checkPageSizeAndRelatedParameters() {
+  private void checkPageSizeAndRelatedParameters(AtomicOperation atomicOperation) {
     final var pageSize = GlobalConfiguration.DISK_CACHE_PAGE_SIZE.getValueAsInteger() << 10;
     final var maxKeySize = GlobalConfiguration.BTREE_MAX_KEY_SIZE.getValueAsInteger();
 
-    if (configuration.getPageSize() != -1 && configuration.getPageSize() != pageSize) {
+    if (configuration.getPageSize(atomicOperation) != -1
+        && configuration.getPageSize(atomicOperation) != pageSize) {
       throw new StorageException(name,
           "Storage is created with value of "
-              + configuration.getPageSize()
+              + configuration.getPageSize(atomicOperation)
               + " parameter equal to "
               + GlobalConfiguration.DISK_CACHE_PAGE_SIZE.getKey()
               + " but current value is "
               + pageSize);
     }
 
-    if (configuration.getMaxKeySize() != -1 && configuration.getMaxKeySize() != maxKeySize) {
+    if (configuration.getMaxKeySize(atomicOperation) != -1
+        && configuration.getMaxKeySize(atomicOperation) != maxKeySize) {
       throw new StorageException(name,
           "Storage is created with value of "
-              + configuration.getMaxKeySize()
+              + configuration.getMaxKeySize(atomicOperation)
               + " parameter equal to "
               + GlobalConfiguration.BTREE_MAX_KEY_SIZE.getKey()
               + " but current value is "
@@ -1014,46 +1095,6 @@ public abstract class AbstractStorage
     // CLOSE THE DATABASE BY REMOVING THE CURRENT USER
     doShutdownOnDelete();
     postDeleteSteps();
-  }
-
-  public boolean check(final boolean verbose, final CommandOutputListener listener) {
-    try {
-      listener.onMessage("Check of storage is started...");
-
-      stateLock.readLock().lock();
-      try {
-        final var lockId = atomicOperationsManager.freezeAtomicOperations(null);
-        try {
-
-          checkOpennessAndMigration();
-
-          final var start = System.currentTimeMillis();
-
-          final var pageErrors =
-              writeCache.checkStoredPages(verbose ? listener : null);
-
-          var errors =
-              pageErrors.length > 0 ? pageErrors.length + " with errors." : " without errors.";
-          listener.onMessage(
-              "Check of storage completed in "
-                  + (System.currentTimeMillis() - start)
-                  + "ms. "
-                  + errors);
-
-          return pageErrors.length == 0;
-        } finally {
-          atomicOperationsManager.releaseAtomicOperations(lockId);
-        }
-      } finally {
-        stateLock.readLock().unlock();
-      }
-    } catch (final RuntimeException ee) {
-      throw logAndPrepareForRethrow(ee);
-    } catch (final Error ee) {
-      throw logAndPrepareForRethrow(ee, false);
-    } catch (final Throwable t) {
-      throw logAndPrepareForRethrow(t, false);
-    }
   }
 
   @Override
@@ -1225,61 +1266,6 @@ public abstract class AbstractStorage
   }
 
   @Override
-  public long getCollectionRecordsSizeById(int collectionId) {
-    try {
-      stateLock.readLock().lock();
-      try {
-
-        checkOpennessAndMigration();
-
-        checkCollectionId(collectionId);
-        final var collection = collections.get(collectionId);
-        if (collection == null) {
-          throwCollectionDoesNotExist(collectionId);
-        }
-
-        return collection.getRecordsSize();
-      } finally {
-        stateLock.readLock().unlock();
-      }
-    } catch (final RuntimeException ee) {
-      throw logAndPrepareForRethrow(ee);
-    } catch (final Error ee) {
-      throw logAndPrepareForRethrow(ee, false);
-    } catch (final Throwable t) {
-      throw logAndPrepareForRethrow(t, false);
-    }
-  }
-
-  @Override
-  public long getCollectionRecordsSizeByName(String collectionName) {
-    Objects.requireNonNull(collectionName);
-
-    try {
-      stateLock.readLock().lock();
-      try {
-
-        checkOpennessAndMigration();
-
-        final var collection = collectionMap.get(collectionName.toLowerCase());
-        if (collection == null) {
-          throwCollectionDoesNotExist(collectionName);
-        }
-
-        return collection.getRecordsSize();
-      } finally {
-        stateLock.readLock().unlock();
-      }
-    } catch (final RuntimeException ee) {
-      throw logAndPrepareForRethrow(ee);
-    } catch (final Error ee) {
-      throw logAndPrepareForRethrow(ee, false);
-    } catch (final Throwable t) {
-      throw logAndPrepareForRethrow(t, false);
-    }
-  }
-
-  @Override
   public String getCollectionRecordConflictStrategy(int collectionId) {
     try {
       stateLock.readLock().lock();
@@ -1340,11 +1326,6 @@ public abstract class AbstractStorage
         "Collection with id " + collectionId + " does not exist inside of storage " + name);
   }
 
-  private void throwCollectionDoesNotExist(String collectionName) {
-    throw new CollectionDoesNotExistException(name,
-        "Collection with name `" + collectionName + "` does not exist inside of storage " + name);
-  }
-
   @Override
   public final int getId() {
     return id;
@@ -1381,6 +1362,8 @@ public abstract class AbstractStorage
             "Collection Id " + collectionId + " is invalid in database '" + name + "'");
       }
 
+      var transaction = session.getActiveTransaction();
+      var atomicOperation = transaction.getAtomicOperation();
       // COUNT PHYSICAL COLLECTION IF ANY
       stateLock.readLock().lock();
       try {
@@ -1393,10 +1376,10 @@ public abstract class AbstractStorage
         }
 
         if (countTombstones) {
-          return collection.getEntries();
+          return collection.getEntries(atomicOperation);
         }
 
-        return collection.getEntries() - collection.getTombstonesCount();
+        return collection.getEntries(atomicOperation) - collection.getTombstonesCount();
       } finally {
         stateLock.readLock().unlock();
       }
@@ -1450,6 +1433,8 @@ public abstract class AbstractStorage
     try {
       long tot = 0;
 
+      var transaction = session.getActiveTransaction();
+      var atomicOperation = transaction.getAtomicOperation();
       stateLock.readLock().lock();
       try {
 
@@ -1465,7 +1450,8 @@ public abstract class AbstractStorage
           if (iCollectionId > -1) {
             final var c = collections.get(iCollectionId);
             if (c != null) {
-              tot += c.getEntries() - (countTombstones ? 0L : c.getTombstonesCount());
+              tot +=
+                  c.getEntries(atomicOperation) - (countTombstones ? 0L : c.getTombstonesCount());
             }
           }
         }
@@ -1499,8 +1485,10 @@ public abstract class AbstractStorage
         final var collection = doGetAndCheckCollection(rid.getCollectionId());
         checkOpennessAndMigration();
 
+        var atomicOperation = session.getActiveTransaction().getAtomicOperation();
         final var ppos =
-            collection.getPhysicalPosition(new PhysicalPosition(rid.getCollectionPosition()));
+            collection.getPhysicalPosition(new PhysicalPosition(rid.getCollectionPosition()),
+                atomicOperation);
         if (ppos == null) {
           return null;
         }
@@ -1525,8 +1513,15 @@ public abstract class AbstractStorage
 
   public Iterator<CollectionBrowsePage> browseCollection(
       final int collectionId,
-      final boolean forward
-  ) {
+      final boolean forward,
+      AtomicOperation atomicOperation) {
+    return browseCollection(collectionId, forward, () -> atomicOperation);
+  }
+
+  public Iterator<CollectionBrowsePage> browseCollection(
+      final int collectionId,
+      final boolean forward,
+      Supplier<AtomicOperation> atomicOperationSupplier) {
     try {
       stateLock.readLock().lock();
       try {
@@ -1545,7 +1540,8 @@ public abstract class AbstractStorage
           @Override
           public boolean hasNext() {
             if (page == null) {
-              page = nextPage(collectionId, lastPos, forward);
+              page = nextPage(collectionId, lastPos, forward,
+                  atomicOperationSupplier.get());
               if (page != null) {
                 lastPos = page.getLastPosition();
               }
@@ -1578,8 +1574,8 @@ public abstract class AbstractStorage
   private CollectionBrowsePage nextPage(
       final int collectionId,
       final long lastPosition,
-      final boolean forward
-  ) {
+      final boolean forward,
+      AtomicOperation atomicOperation) {
     try {
       stateLock.readLock().lock();
       try {
@@ -1587,7 +1583,7 @@ public abstract class AbstractStorage
         checkOpennessAndMigration();
 
         final var collection = doGetAndCheckCollection(collectionId);
-        return collection.nextPage(lastPosition, forward);
+        return collection.nextPage(lastPosition, forward, atomicOperation);
       } finally {
         stateLock.readLock().unlock();
       }
@@ -1611,9 +1607,10 @@ public abstract class AbstractStorage
   }
 
   @Override
-  public @Nonnull RawBuffer readRecord(final RecordIdInternal rid) {
+  public @Nonnull RawBuffer readRecord(final RecordIdInternal rid,
+      @Nonnull AtomicOperation atomicOperation) {
     try {
-      return readRecordInternal(rid);
+      return readRecordInternal(rid, atomicOperation);
     } catch (final RuntimeException ee) {
       throw logAndPrepareForRethrow(ee);
     } catch (final Error ee) {
@@ -1722,7 +1719,7 @@ public abstract class AbstractStorage
         makeStorageDirty();
         atomicOperationsManager.executeInsideAtomicOperation(
             atomicOperation -> {
-              lockCollections(collectionsToLock);
+              lockCollections(collectionsToLock, atomicOperation);
 
               var session = clientTx.getDatabaseSession();
               for (final var txEntry : newRecords) {
@@ -1751,7 +1748,8 @@ public abstract class AbstractStorage
                   final var rid = rec.getIdentity();
                   final var collection =
                       (PaginatedCollection) doGetAndCheckCollection(rid.getCollectionId());
-                  var recordStatus = collection.getRecordStatus(rid.getCollectionPosition());
+                  var recordStatus = collection.getRecordStatus(rid.getCollectionPosition(),
+                      atomicOperation);
                   if (recordStatus == RECORD_STATUS.NOT_EXISTENT) {
                     var ppos =
                         collection.allocatePosition(
@@ -1890,6 +1888,7 @@ public abstract class AbstractStorage
       }
 
       final List<RecordOperation> result = new ArrayList<>(8);
+      final var atomicOperation = frontendTransaction.getAtomicOperation();
       stateLock.readLock().lock();
       try {
         try {
@@ -1898,12 +1897,11 @@ public abstract class AbstractStorage
           makeStorageDirty();
 
           Throwable error = null;
-          startStorageTx(frontendTransaction);
+          startTxCommit(atomicOperation);
           try {
-            final var atomicOperation = atomicOperationsManager.getCurrentOperation();
-            lockCollections(collectionsToLock);
-            lockLinkBags(collectionsToLock);
-            lockIndexes(indexOperations);
+            lockCollections(collectionsToLock, atomicOperation);
+            lockLinkBags(collectionsToLock, atomicOperation);
+            lockIndexes(indexOperations, atomicOperation);
 
             final Map<RecordOperation, PhysicalPosition> positions = new IdentityHashMap<>(8);
             for (final var recordOperation : newRecords) {
@@ -1981,9 +1979,11 @@ public abstract class AbstractStorage
             var recordSerializationContext = frontendTransaction.getRecordSerializationContext();
             recordSerializationContext.executeOperations(atomicOperation, this);
 
-            commitIndexes(frontendTransaction.getDatabaseSession(), indexOperations);
+            commitIndexes(frontendTransaction.getDatabaseSession(), atomicOperation,
+                indexOperations);
           } catch (final IOException | RuntimeException e) {
             error = e;
+
             if (e instanceof RuntimeException) {
               throw ((RuntimeException) e);
             } else {
@@ -1992,14 +1992,13 @@ public abstract class AbstractStorage
             }
           } finally {
             if (error != null) {
-              rollback(error);
+              rollback(error, atomicOperation);
             } else {
-              endStorageTx();
+              endTxCommit(atomicOperation);
             }
-            this.transaction.set(null);
           }
         } finally {
-          atomicOperationsManager.ensureThatComponentsUnlocked();
+          atomicOperationsManager.ensureThatComponentsUnlocked(atomicOperation);
           session.getMetadata().clearThreadLocalSchemaSnapshot();
         }
       } finally {
@@ -2011,7 +2010,7 @@ public abstract class AbstractStorage
             .debug(
                 this,
                 "%d Committed transaction %d on database '%s' (result=%s)",
-                logger, Thread.currentThread().getId(),
+                logger, Thread.currentThread().threadId(),
                 frontendTransaction.getId(),
                 session.getDatabaseName(),
                 result);
@@ -2020,20 +2019,19 @@ public abstract class AbstractStorage
     } catch (final RuntimeException ee) {
       throw logAndPrepareForRethrow(ee);
     } catch (final Error ee) {
-      atomicOperationsManager.alarmClearOfAtomicOperation();
       throw logAndPrepareForRethrow(ee);
     } catch (final Throwable t) {
       throw logAndPrepareForRethrow(t);
     }
   }
 
-  private void commitIndexes(DatabaseSessionEmbedded db,
+  private void commitIndexes(DatabaseSessionEmbedded db, AtomicOperation atomicOperation,
       final Map<String, FrontendTransactionIndexChanges> indexesToCommit) {
     for (final var changes : indexesToCommit.values()) {
       var index = changes.getIndex();
       try {
         if (changes.cleared) {
-          clearIndex(index.getIndexId());
+          doClearIndex(atomicOperation, index.getIndexId());
         }
 
         for (final var changesPerKey : changes.changesPerKey.values()) {
@@ -2098,7 +2096,8 @@ public abstract class AbstractStorage
   }
 
   public int loadExternalIndexEngine(
-      final IndexMetadata indexMetadata, final Map<String, String> engineProperties) {
+      final IndexMetadata indexMetadata, final Map<String, String> engineProperties,
+      AtomicOperation atomicOperation) {
     final var indexDefinition = indexMetadata.getIndexDefinition();
     try {
       stateLock.writeLock().lock();
@@ -2107,7 +2106,7 @@ public abstract class AbstractStorage
         checkOpennessAndMigration();
 
         // this method introduced for binary compatibility only
-        if (configuration.getBinaryFormatVersion() > 15) {
+        if (configuration.getBinaryFormatVersion(atomicOperation) > 15) {
           return -1;
         }
         if (indexEngineNameMap.containsKey(indexMetadata.getName())) {
@@ -2118,7 +2117,7 @@ public abstract class AbstractStorage
 
         final var valueSerializerId = StreamSerializerRID.INSTANCE.getId();
 
-        final var keySerializer = determineKeySerializer(indexDefinition);
+        final var keySerializer = determineKeySerializer(indexDefinition, atomicOperation);
         if (keySerializer == null) {
           throw new IndexException(name, "Can not determine key serializer");
         }
@@ -2141,15 +2140,13 @@ public abstract class AbstractStorage
 
         final var engine = Indexes.createIndexEngine(this, engineData);
 
-        engine.load(engineData);
+        engine.load(engineData, atomicOperation);
 
-        atomicOperationsManager.executeInsideAtomicOperation(
-            atomicOperation -> {
-              indexEngineNameMap.put(indexMetadata.getName(), engine);
-              indexEngines.add(engine);
-              ((CollectionBasedStorageConfiguration) configuration)
-                  .addIndexEngine(atomicOperation, indexMetadata.getName(), engineData);
-            });
+        indexEngineNameMap.put(indexMetadata.getName(), engine);
+        indexEngines.add(engine);
+        ((CollectionBasedStorageConfiguration) configuration)
+            .addIndexEngine(atomicOperation, indexMetadata.getName(), engineData);
+
         return generateIndexId(engineData.getIndexId(), engine);
       } catch (final IOException e) {
         throw BaseException.wrapException(
@@ -2182,13 +2179,6 @@ public abstract class AbstractStorage
         throw new IndexException(name, "Types of indexed keys have to be provided");
       }
 
-      final var keySerializer = determineKeySerializer(indexDefinition);
-      if (keySerializer == null) {
-        throw new IndexException(name, "Can not determine key serializer");
-      }
-
-      final var keySize = determineKeySize(indexDefinition);
-
       stateLock.writeLock().lock();
       try {
         checkOpennessAndMigration();
@@ -2196,6 +2186,12 @@ public abstract class AbstractStorage
         makeStorageDirty();
         return atomicOperationsManager.calculateInsideAtomicOperation(
             atomicOperation -> {
+              final var keySerializer = determineKeySerializer(indexDefinition, atomicOperation);
+              if (keySerializer == null) {
+                throw new IndexException(name, "Can not determine key serializer");
+              }
+
+              final var keySize = determineKeySize(indexDefinition);
               if (indexEngineNameMap.containsKey(indexMetadata.getName())) {
                 // OLD INDEX FILE ARE PRESENT: THIS IS THE CASE OF PARTIAL/BROKEN INDEX
                 LogManager.instance()
@@ -2289,7 +2285,8 @@ public abstract class AbstractStorage
     }
   }
 
-  private BinarySerializer<?> determineKeySerializer(final IndexDefinition indexDefinition) {
+  private BinarySerializer<?> determineKeySerializer(final IndexDefinition indexDefinition,
+      AtomicOperation atomicOperation) {
     if (indexDefinition == null) {
       throw new StorageException(name, "Index definition has to be provided");
     }
@@ -2313,7 +2310,8 @@ public abstract class AbstractStorage
     } else {
       final var keyType = indexDefinition.getTypes()[0];
 
-      if (keyType == PropertyTypeInternal.STRING && configuration.getBinaryFormatVersion() >= 13) {
+      if (keyType == PropertyTypeInternal.STRING
+          && configuration.getBinaryFormatVersion(atomicOperation) >= 13) {
         return UTF8Serializer.INSTANCE;
       }
 
@@ -2388,13 +2386,11 @@ public abstract class AbstractStorage
     }
   }
 
-  public boolean removeKeyFromIndex(final int indexId, final Object key)
+  public boolean removeKeyFromIndex(final int indexId, final Object key,
+      @Nonnull AtomicOperation atomicOperation)
       throws InvalidIndexEngineIdException {
     final var internalIndexId = extractInternalId(indexId);
-
     try {
-      assert transaction.get() != null;
-      final var atomicOperation = atomicOperationsManager.getCurrentOperation();
       return removeKeyFromIndexInternal(atomicOperation, internalIndexId, key);
     } catch (final InvalidIndexEngineIdException ie) {
       throw logAndPrepareForRethrow(ie);
@@ -2434,15 +2430,8 @@ public abstract class AbstractStorage
     }
   }
 
-  public void clearIndex(final int indexId)
-      throws InvalidIndexEngineIdException {
+  public void clearIndex(final int indexId) {
     try {
-      if (transaction.get() != null) {
-        final var atomicOperation = atomicOperationsManager.getCurrentOperation();
-        doClearIndex(atomicOperation, indexId);
-        return;
-      }
-
       final var internalIndexId = extractInternalId(indexId);
       stateLock.readLock().lock();
       try {
@@ -2456,8 +2445,6 @@ public abstract class AbstractStorage
       } finally {
         stateLock.readLock().unlock();
       }
-    } catch (final InvalidIndexEngineIdException ie) {
-      throw logAndPrepareForRethrow(ie);
     } catch (final RuntimeException ee) {
       throw logAndPrepareForRethrow(ee);
     } catch (final Error ee) {
@@ -2484,46 +2471,7 @@ public abstract class AbstractStorage
     }
   }
 
-  public Object getIndexValue(DatabaseSessionEmbedded db, int indexId, final Object key)
-      throws InvalidIndexEngineIdException {
-    indexId = extractInternalId(indexId);
-    try {
-      if (transaction.get() != null) {
-        return doGetIndexValue(db, indexId, key);
-      }
-      stateLock.readLock().lock();
-      try {
-        checkOpennessAndMigration();
-        return doGetIndexValue(db, indexId, key);
-      } finally {
-        stateLock.readLock().unlock();
-      }
-    } catch (final InvalidIndexEngineIdException ie) {
-      throw logAndPrepareForRethrow(ie);
-    } catch (final RuntimeException ee) {
-      throw logAndPrepareForRethrow(ee);
-    } catch (final Error ee) {
-      throw logAndPrepareForRethrow(ee, false);
-    } catch (final Throwable t) {
-      throw logAndPrepareForRethrow(t, false);
-    }
-  }
-
-  private Object doGetIndexValue(DatabaseSessionEmbedded db, final int indexId,
-      final Object key)
-      throws InvalidIndexEngineIdException {
-    final var engineAPIVersion = extractEngineAPIVersion(indexId);
-    if (engineAPIVersion != 0) {
-      throw new IllegalStateException(
-          "Unsupported version of index engine API. Required 0 but found " + engineAPIVersion);
-    }
-    checkIndexId(indexId);
-    final var engine = indexEngines.get(indexId);
-    assert indexId == engine.getId();
-    return ((IndexEngine) engine).get(db, key);
-  }
-
-  public Stream<RID> getIndexValues(int indexId, final Object key)
+  public Stream<RID> getIndexValues(int indexId, final Object key, AtomicOperation atomicOperation)
       throws InvalidIndexEngineIdException {
     final var engineAPIVersion = extractEngineAPIVersion(indexId);
     if (engineAPIVersion != 1) {
@@ -2534,16 +2482,11 @@ public abstract class AbstractStorage
     indexId = extractInternalId(indexId);
 
     try {
-
-      if (transaction.get() != null) {
-        return doGetIndexValues(indexId, key);
-      }
-
       stateLock.readLock().lock();
       try {
         checkOpennessAndMigration();
 
-        return doGetIndexValues(indexId, key);
+        return doGetIndexValues(indexId, key, atomicOperation);
       } finally {
         stateLock.readLock().unlock();
       }
@@ -2558,14 +2501,15 @@ public abstract class AbstractStorage
     }
   }
 
-  private Stream<RID> doGetIndexValues(final int indexId, final Object key)
+  private Stream<RID> doGetIndexValues(final int indexId, final Object key,
+      AtomicOperation atomicOperation)
       throws InvalidIndexEngineIdException {
     checkIndexId(indexId);
 
     final var engine = indexEngines.get(indexId);
     assert indexId == engine.getId();
 
-    return ((V1IndexEngine) engine).get(key);
+    return ((V1IndexEngine) engine).get(key, atomicOperation);
   }
 
   public BaseIndexEngine getIndexEngine(int indexId) throws InvalidIndexEngineIdException {
@@ -2596,8 +2540,7 @@ public abstract class AbstractStorage
     }
   }
 
-  @Nullable
-  public <T> T callIndexEngine(
+  public <T> void callIndexEngine(
       final boolean readOperation, int indexId, final IndexEngineCallback<T> callback)
       throws InvalidIndexEngineIdException {
     indexId = extractInternalId(indexId);
@@ -2605,14 +2548,13 @@ public abstract class AbstractStorage
     try {
       stateLock.readLock().lock();
       try {
-
         checkOpennessAndMigration();
 
         if (readOperation) {
           makeStorageDirty();
         }
 
-        return doCallIndexEngine(indexId, callback);
+        doCallIndexEngine(indexId, callback);
       } finally {
         stateLock.readLock().unlock();
       }
@@ -2627,16 +2569,17 @@ public abstract class AbstractStorage
     }
   }
 
-  private <T> T doCallIndexEngine(final int indexId, final IndexEngineCallback<T> callback)
+  private <T> void doCallIndexEngine(final int indexId, final IndexEngineCallback<T> callback)
       throws InvalidIndexEngineIdException {
     checkIndexId(indexId);
 
     final var engine = indexEngines.get(indexId);
 
-    return callback.callEngine(engine);
+    callback.callEngine(engine);
   }
 
-  public void putRidIndexEntry(int indexId, final Object key, final RID value)
+  public void putRidIndexEntry(int indexId, final Object key, final RID value,
+      @Nonnull AtomicOperation atomicOperation)
       throws InvalidIndexEngineIdException {
     final var engineAPIVersion = extractEngineAPIVersion(indexId);
     final var internalIndexId = extractInternalId(indexId);
@@ -2647,9 +2590,6 @@ public abstract class AbstractStorage
     }
 
     try {
-      assert transaction.get() != null;
-      final var atomicOperation = atomicOperationsManager.getCurrentOperation();
-      assert atomicOperation != null;
       putRidIndexEntryInternal(atomicOperation, internalIndexId, key, value);
     } catch (final InvalidIndexEngineIdException ie) {
       throw logAndPrepareForRethrow(ie);
@@ -2674,7 +2614,8 @@ public abstract class AbstractStorage
     ((V1IndexEngine) engine).put(atomicOperation, key, value);
   }
 
-  public boolean removeRidIndexEntry(int indexId, final Object key, final RID value)
+  public boolean removeRidIndexEntry(int indexId, final Object key, final RID value,
+      @Nonnull AtomicOperation atomicOperation)
       throws InvalidIndexEngineIdException {
     final var engineAPIVersion = extractEngineAPIVersion(indexId);
     final var internalIndexId = extractInternalId(indexId);
@@ -2685,11 +2626,7 @@ public abstract class AbstractStorage
     }
 
     try {
-      assert transaction.get() != null;
-      final var atomicOperation = atomicOperationsManager.getCurrentOperation();
-      assert atomicOperation != null;
       return removeRidIndexEntryInternal(atomicOperation, internalIndexId, key, value);
-
     } catch (final InvalidIndexEngineIdException ie) {
       throw logAndPrepareForRethrow(ie);
     } catch (final RuntimeException ee) {
@@ -2729,14 +2666,11 @@ public abstract class AbstractStorage
       final int indexId,
       final Object key,
       final RID value,
-      final IndexEngineValidator<Object, RID> validator)
+      final IndexEngineValidator<Object, RID> validator, @Nonnull AtomicOperation atomicOperation)
       throws InvalidIndexEngineIdException {
     final var internalIndexId = extractInternalId(indexId);
 
     try {
-      assert transaction.get() != null;
-      final var atomicOperation = atomicOperationsManager.getCurrentOperation();
-      assert atomicOperation != null;
       return doValidatedPutIndexValue(atomicOperation, internalIndexId, key, value, validator);
     } catch (final InvalidIndexEngineIdException ie) {
       throw logAndPrepareForRethrow(ie);
@@ -2782,29 +2716,24 @@ public abstract class AbstractStorage
   }
 
   public Stream<RawPair<Object, RID>> iterateIndexEntriesBetween(
-      DatabaseSessionEmbedded db, int indexId,
+      int indexId,
       final Object rangeFrom,
       final boolean fromInclusive,
       final Object rangeTo,
       final boolean toInclusive,
       final boolean ascSortOrder,
-      final IndexEngineValuesTransformer transformer)
+      final IndexEngineValuesTransformer transformer, @Nonnull AtomicOperation atomicOperation)
       throws InvalidIndexEngineIdException {
     indexId = extractInternalId(indexId);
-
     try {
-      if (transaction.get() != null) {
-        return doIterateIndexEntriesBetween(db,
-            indexId, rangeFrom, fromInclusive, rangeTo, toInclusive, ascSortOrder, transformer);
-      }
-
       stateLock.readLock().lock();
       try {
 
         checkOpennessAndMigration();
 
-        return doIterateIndexEntriesBetween(db,
-            indexId, rangeFrom, fromInclusive, rangeTo, toInclusive, ascSortOrder, transformer);
+        return doIterateIndexEntriesBetween(
+            indexId, rangeFrom, fromInclusive, rangeTo, toInclusive, ascSortOrder, transformer,
+            atomicOperation);
       } finally {
         stateLock.readLock().unlock();
       }
@@ -2820,21 +2749,21 @@ public abstract class AbstractStorage
   }
 
   private Stream<RawPair<Object, RID>> doIterateIndexEntriesBetween(
-      DatabaseSessionEmbedded db, final int indexId,
+      final int indexId,
       final Object rangeFrom,
       final boolean fromInclusive,
       final Object rangeTo,
       final boolean toInclusive,
       final boolean ascSortOrder,
-      final IndexEngineValuesTransformer transformer)
+      final IndexEngineValuesTransformer transformer, AtomicOperation atomicOperation)
       throws InvalidIndexEngineIdException {
     checkIndexId(indexId);
 
     final var engine = indexEngines.get(indexId);
     assert indexId == engine.getId();
 
-    return engine.iterateEntriesBetween(db
-        , rangeFrom, fromInclusive, rangeTo, toInclusive, ascSortOrder, transformer);
+    return engine.iterateEntriesBetween(
+        rangeFrom, fromInclusive, rangeTo, toInclusive, ascSortOrder, transformer, atomicOperation);
   }
 
   public Stream<RawPair<Object, RID>> iterateIndexEntriesMajor(
@@ -2842,21 +2771,18 @@ public abstract class AbstractStorage
       final Object fromKey,
       final boolean isInclusive,
       final boolean ascSortOrder,
-      final IndexEngineValuesTransformer transformer)
+      final IndexEngineValuesTransformer transformer, @Nonnull AtomicOperation atomicOperation)
       throws InvalidIndexEngineIdException {
     indexId = extractInternalId(indexId);
 
     try {
-      if (transaction.get() != null) {
-        return doIterateIndexEntriesMajor(indexId, fromKey, isInclusive, ascSortOrder, transformer);
-      }
-
       stateLock.readLock().lock();
       try {
 
         checkOpennessAndMigration();
 
-        return doIterateIndexEntriesMajor(indexId, fromKey, isInclusive, ascSortOrder, transformer);
+        return doIterateIndexEntriesMajor(indexId, fromKey, isInclusive, ascSortOrder,
+            transformer, atomicOperation);
       } finally {
         stateLock.readLock().unlock();
       }
@@ -2876,14 +2802,15 @@ public abstract class AbstractStorage
       final Object fromKey,
       final boolean isInclusive,
       final boolean ascSortOrder,
-      final IndexEngineValuesTransformer transformer)
+      final IndexEngineValuesTransformer transformer, AtomicOperation atomicOperation)
       throws InvalidIndexEngineIdException {
     checkIndexId(indexId);
 
     final var engine = indexEngines.get(indexId);
     assert indexId == engine.getId();
 
-    return engine.iterateEntriesMajor(fromKey, isInclusive, ascSortOrder, transformer);
+    return engine.iterateEntriesMajor(fromKey, isInclusive, ascSortOrder, transformer,
+        atomicOperation);
   }
 
   public Stream<RawPair<Object, RID>> iterateIndexEntriesMinor(
@@ -2891,21 +2818,17 @@ public abstract class AbstractStorage
       final Object toKey,
       final boolean isInclusive,
       final boolean ascSortOrder,
-      final IndexEngineValuesTransformer transformer)
+      final IndexEngineValuesTransformer transformer, AtomicOperation atomicOperation)
       throws InvalidIndexEngineIdException {
     indexId = extractInternalId(indexId);
 
     try {
-      if (transaction.get() != null) {
-        return doIterateIndexEntriesMinor(indexId, toKey, isInclusive, ascSortOrder, transformer);
-      }
-
       stateLock.readLock().lock();
       try {
-
         checkOpennessAndMigration();
 
-        return doIterateIndexEntriesMinor(indexId, toKey, isInclusive, ascSortOrder, transformer);
+        return doIterateIndexEntriesMinor(indexId, toKey, isInclusive, ascSortOrder, transformer,
+            atomicOperation);
       } finally {
         stateLock.readLock().unlock();
       }
@@ -2925,32 +2848,27 @@ public abstract class AbstractStorage
       final Object toKey,
       final boolean isInclusive,
       final boolean ascSortOrder,
-      final IndexEngineValuesTransformer transformer)
+      final IndexEngineValuesTransformer transformer, AtomicOperation atomicOperation)
       throws InvalidIndexEngineIdException {
     checkIndexId(indexId);
 
     final var engine = indexEngines.get(indexId);
     assert indexId == engine.getId();
 
-    return engine.iterateEntriesMinor(toKey, isInclusive, ascSortOrder, transformer);
+    return engine.iterateEntriesMinor(toKey, isInclusive, ascSortOrder, transformer,
+        atomicOperation);
   }
 
   public Stream<RawPair<Object, RID>> getIndexStream(
-      int indexId, final IndexEngineValuesTransformer valuesTransformer)
+      int indexId, final IndexEngineValuesTransformer valuesTransformer,
+      @Nonnull AtomicOperation atomicOperation)
       throws InvalidIndexEngineIdException {
     indexId = extractInternalId(indexId);
 
     try {
-      if (transaction.get() != null) {
-        return doGetIndexStream(indexId, valuesTransformer);
-      }
-
       stateLock.readLock().lock();
       try {
-
-        checkOpennessAndMigration();
-
-        return doGetIndexStream(indexId, valuesTransformer);
+        return doGetIndexStream(indexId, valuesTransformer, atomicOperation);
       } finally {
         stateLock.readLock().unlock();
       }
@@ -2966,32 +2884,29 @@ public abstract class AbstractStorage
   }
 
   private Stream<RawPair<Object, RID>> doGetIndexStream(
-      final int indexId, final IndexEngineValuesTransformer valuesTransformer)
+      final int indexId, final IndexEngineValuesTransformer valuesTransformer,
+      AtomicOperation atomicOperation)
       throws InvalidIndexEngineIdException {
     checkIndexId(indexId);
 
     final var engine = indexEngines.get(indexId);
     assert indexId == engine.getId();
 
-    return engine.stream(valuesTransformer);
+    return engine.stream(valuesTransformer, atomicOperation);
   }
 
   public Stream<RawPair<Object, RID>> getIndexDescStream(
-      int indexId, final IndexEngineValuesTransformer valuesTransformer)
+      int indexId, final IndexEngineValuesTransformer valuesTransformer,
+      @Nonnull AtomicOperation atomicOperation)
       throws InvalidIndexEngineIdException {
     indexId = extractInternalId(indexId);
 
     try {
-      if (transaction.get() != null) {
-        return doGetIndexDescStream(indexId, valuesTransformer);
-      }
-
       stateLock.readLock().lock();
       try {
-
         checkOpennessAndMigration();
 
-        return doGetIndexDescStream(indexId, valuesTransformer);
+        return doGetIndexDescStream(indexId, valuesTransformer, atomicOperation);
       } finally {
         stateLock.readLock().unlock();
       }
@@ -3007,30 +2922,27 @@ public abstract class AbstractStorage
   }
 
   private Stream<RawPair<Object, RID>> doGetIndexDescStream(
-      final int indexId, final IndexEngineValuesTransformer valuesTransformer)
+      final int indexId, final IndexEngineValuesTransformer valuesTransformer,
+      AtomicOperation atomicOperation)
       throws InvalidIndexEngineIdException {
     checkIndexId(indexId);
 
     final var engine = indexEngines.get(indexId);
     assert indexId == engine.getId();
 
-    return engine.descStream(valuesTransformer);
+    return engine.descStream(valuesTransformer, atomicOperation);
   }
 
-  public Stream<Object> getIndexKeyStream(int indexId) throws InvalidIndexEngineIdException {
+  public Stream<Object> getIndexKeyStream(int indexId, @Nonnull AtomicOperation atomicOperation)
+      throws InvalidIndexEngineIdException {
     indexId = extractInternalId(indexId);
 
     try {
-      if (transaction.get() != null) {
-        return doGetIndexKeyStream(indexId);
-      }
-
       stateLock.readLock().lock();
       try {
-
         checkOpennessAndMigration();
 
-        return doGetIndexKeyStream(indexId);
+        return doGetIndexKeyStream(indexId, atomicOperation);
       } finally {
         stateLock.readLock().unlock();
       }
@@ -3045,31 +2957,27 @@ public abstract class AbstractStorage
     }
   }
 
-  private Stream<Object> doGetIndexKeyStream(final int indexId)
+  private Stream<Object> doGetIndexKeyStream(final int indexId, AtomicOperation atomicOperation)
       throws InvalidIndexEngineIdException {
     checkIndexId(indexId);
 
     final var engine = indexEngines.get(indexId);
     assert indexId == engine.getId();
 
-    return engine.keyStream();
+    return engine.keyStream(atomicOperation);
   }
 
-  public long getIndexSize(int indexId, final IndexEngineValuesTransformer transformer)
+  public long getIndexSize(int indexId, final IndexEngineValuesTransformer transformer,
+      @Nonnull AtomicOperation atomicOperation)
       throws InvalidIndexEngineIdException {
     indexId = extractInternalId(indexId);
 
     try {
-      if (transaction.get() != null) {
-        return doGetIndexSize(indexId, transformer);
-      }
-
       stateLock.readLock().lock();
       try {
-
         checkOpennessAndMigration();
 
-        return doGetIndexSize(indexId, transformer);
+        return doGetIndexSize(indexId, transformer, atomicOperation);
       } finally {
         stateLock.readLock().unlock();
       }
@@ -3084,58 +2992,21 @@ public abstract class AbstractStorage
     }
   }
 
-  private long doGetIndexSize(final int indexId, final IndexEngineValuesTransformer transformer)
+  private long doGetIndexSize(final int indexId, final IndexEngineValuesTransformer transformer,
+      AtomicOperation atomicOperation)
       throws InvalidIndexEngineIdException {
     checkIndexId(indexId);
 
     final var engine = indexEngines.get(indexId);
     assert indexId == engine.getId();
 
-    return engine.size(this, transformer);
+    return engine.size(this, transformer, atomicOperation);
   }
 
-  public boolean hasIndexRangeQuerySupport(int indexId) throws InvalidIndexEngineIdException {
-    indexId = extractInternalId(indexId);
 
-    try {
-      if (transaction.get() != null) {
-        return doHasRangeQuerySupport(indexId);
-      }
-
-      stateLock.readLock().lock();
-      try {
-
-        checkOpennessAndMigration();
-
-        return doHasRangeQuerySupport(indexId);
-      } finally {
-        stateLock.readLock().unlock();
-      }
-    } catch (final InvalidIndexEngineIdException ie) {
-      throw logAndPrepareForRethrow(ie);
-    } catch (final RuntimeException ee) {
-      throw logAndPrepareForRethrow(ee);
-    } catch (final Error ee) {
-      throw logAndPrepareForRethrow(ee, false);
-    } catch (final Throwable t) {
-      throw logAndPrepareForRethrow(t, false);
-    }
-  }
-
-  private boolean doHasRangeQuerySupport(final int indexId) throws InvalidIndexEngineIdException {
-    checkIndexId(indexId);
-
-    final var engine = indexEngines.get(indexId);
-    assert indexId == engine.getId();
-
-    return engine.hasRangeQuerySupport();
-  }
-
-  private void rollback(final Throwable error) throws IOException {
-    assert transaction.get() != null;
-    atomicOperationsManager.endAtomicOperation(error);
-
-    assert atomicOperationsManager.getCurrentOperation() == null;
+  private void rollback(final Throwable error, @Nonnull AtomicOperation atomicOperation)
+      throws IOException {
+    atomicOperationsManager.endAtomicOperation(atomicOperation, error);
   }
 
   public void moveToErrorStateIfNeeded(final Throwable error) {
@@ -3154,7 +3025,7 @@ public abstract class AbstractStorage
       try {
 
         final var synchStartedAt = System.nanoTime();
-        final var lockId = atomicOperationsManager.freezeAtomicOperations(null);
+        final var lockId = atomicOperationsManager.freezeWriteOperations(null);
         try {
           checkOpennessAndMigration();
 
@@ -3186,7 +3057,7 @@ public abstract class AbstractStorage
           }
 
         } finally {
-          atomicOperationsManager.releaseAtomicOperations(lockId);
+          atomicOperationsManager.unfreezeWriteOperations(lockId);
           synchDuration.setNanos(System.nanoTime() - synchStartedAt);
         }
       } finally {
@@ -3252,42 +3123,6 @@ public abstract class AbstractStorage
     }
   }
 
-  @Override
-  public final long getSize(DatabaseSessionEmbedded session) {
-    try {
-      try {
-        long size = 0;
-
-        stateLock.readLock().lock();
-        try {
-
-          checkOpennessAndMigration();
-
-          for (final var c : collections) {
-            if (c != null) {
-              size += c.getRecordsSize();
-            }
-          }
-        } finally {
-          stateLock.readLock().unlock();
-        }
-
-        return size;
-      } catch (final IOException ioe) {
-        throw BaseException.wrapException(
-            new StorageException(name, "Cannot calculate records size"),
-            ioe, name);
-      }
-    } catch (final RuntimeException ee) {
-      throw logAndPrepareForRethrow(ee);
-    } catch (final Error ee) {
-      throw logAndPrepareForRethrow(ee, false);
-    } catch (final Throwable t) {
-      throw logAndPrepareForRethrow(t, false);
-    }
-  }
-
-  @Override
   public final int getCollections() {
     try {
       stateLock.readLock().lock();
@@ -3348,11 +3183,11 @@ public abstract class AbstractStorage
         checkOpennessAndMigration();
 
         if (throwException) {
-          atomicOperationsManager.freezeAtomicOperations(
+          atomicOperationsManager.freezeWriteOperations(
               () -> new ModificationOperationProhibitedException(name,
                   "Modification requests are prohibited"));
         } else {
-          atomicOperationsManager.freezeAtomicOperations(null);
+          atomicOperationsManager.freezeWriteOperations(null);
         }
 
         final List<FreezableStorageComponent> frozenIndexes = new ArrayList<>(indexEngines.size());
@@ -3395,7 +3230,7 @@ public abstract class AbstractStorage
         }
       }
 
-      atomicOperationsManager.releaseAtomicOperations(-1);
+      atomicOperationsManager.unfreezeWriteOperations(-1);
     } catch (final RuntimeException ee) {
       throw logAndPrepareForRethrow(ee);
     } catch (final Error ee) {
@@ -3430,11 +3265,6 @@ public abstract class AbstractStorage
     } catch (final Throwable t) {
       throw logAndPrepareForRethrow(t, false);
     }
-  }
-
-  @SuppressWarnings("unused")
-  public static String getMode() {
-    return "rw";
   }
 
   /**
@@ -3488,13 +3318,15 @@ public abstract class AbstractStorage
         return new PhysicalPosition[0];
       }
 
+      var transaction = session.getActiveTransaction();
+      var atomicOperation = transaction.getAtomicOperation();
+
       stateLock.readLock().lock();
       try {
-
         checkOpennessAndMigration();
 
         final var collection = doGetAndCheckCollection(currentCollectionId);
-        return collection.higherPositions(physicalPosition, limit);
+        return collection.higherPositions(physicalPosition, limit, atomicOperation);
       } catch (final IOException ioe) {
         throw BaseException.wrapException(
             new StorageException(name,
@@ -3521,13 +3353,14 @@ public abstract class AbstractStorage
         return new PhysicalPosition[0];
       }
 
+      var transaction = session.getActiveTransaction();
+      var atomicOperation = transaction.getAtomicOperation();
       stateLock.readLock().lock();
       try {
-
         checkOpennessAndMigration();
 
         final var collection = doGetAndCheckCollection(collectionId);
-        return collection.ceilingPositions(physicalPosition, limit);
+        return collection.ceilingPositions(physicalPosition, limit, atomicOperation);
       } catch (final IOException ioe) {
         throw BaseException.wrapException(
             new StorageException(name,
@@ -3554,6 +3387,8 @@ public abstract class AbstractStorage
         return new PhysicalPosition[0];
       }
 
+      var transaction = session.getActiveTransaction();
+      var atomicOperation = transaction.getAtomicOperation();
       stateLock.readLock().lock();
       try {
 
@@ -3561,7 +3396,7 @@ public abstract class AbstractStorage
 
         final var collection = doGetAndCheckCollection(currentCollectionId);
 
-        return collection.lowerPositions(physicalPosition, limit);
+        return collection.lowerPositions(physicalPosition, limit, atomicOperation);
       } catch (final IOException ioe) {
         throw BaseException.wrapException(
             new StorageException(name,
@@ -3588,12 +3423,15 @@ public abstract class AbstractStorage
         return new PhysicalPosition[0];
       }
 
+      var transaction = session.getActiveTransaction();
+      var atomicOperation = transaction.getAtomicOperation();
+
       stateLock.readLock().lock();
       try {
         checkOpennessAndMigration();
         final var collection = doGetAndCheckCollection(collectionId);
 
-        return collection.floorPositions(physicalPosition, limit);
+        return collection.floorPositions(physicalPosition, limit, atomicOperation);
       } catch (final IOException ioe) {
         throw BaseException.wrapException(
             new StorageException(name,
@@ -3791,12 +3629,12 @@ public abstract class AbstractStorage
     }
   }
 
-  public void deleteTreeLinkBag(final BTreeBasedLinkBag ridBag) {
+  public void deleteTreeLinkBag(final BTreeBasedLinkBag ridBag,
+      @Nonnull AtomicOperation atomicOperation) {
     try {
       checkOpennessAndMigration();
 
-      assert transaction.get() != null;
-      deleteTreeLinkBag(ridBag, atomicOperationsManager.getCurrentOperation());
+      doDeleteTreeLinkBag(ridBag, atomicOperation);
     } catch (final RuntimeException ee) {
       throw logAndPrepareForRethrow(ee);
     } catch (final Error ee) {
@@ -3806,7 +3644,7 @@ public abstract class AbstractStorage
     }
   }
 
-  private void deleteTreeLinkBag(BTreeBasedLinkBag ridBag, AtomicOperation atomicOperation) {
+  private void doDeleteTreeLinkBag(BTreeBasedLinkBag ridBag, AtomicOperation atomicOperation) {
     final var collectionPointer = ridBag.getCollectionPointer();
     checkOpennessAndMigration();
 
@@ -3901,7 +3739,8 @@ public abstract class AbstractStorage
   }
 
   @Nonnull
-  private RawBuffer readRecordInternal(final RecordIdInternal rid) {
+  private RawBuffer readRecordInternal(@Nonnull final RecordIdInternal rid,
+      @Nonnull AtomicOperation atomicOperation) {
     if (!rid.isPersistent()) {
       throw new RecordNotFoundException(name,
           rid, "Cannot read record "
@@ -3910,20 +3749,6 @@ public abstract class AbstractStorage
           + name
           + '\'');
     }
-
-    if (transaction.get() != null) {
-      checkOpennessAndMigration();
-      final StorageCollection collection;
-      try {
-        collection = doGetAndCheckCollection(rid.getCollectionId());
-      } catch (IllegalArgumentException e) {
-        throw BaseException.wrapException(new RecordNotFoundException(name, rid), e, name);
-      }
-      // Disabled this assert have no meaning anymore
-      // assert iLockingStrategy.equals(LOCKING_STRATEGY.DEFAULT);
-      return doReadRecord(collection, rid);
-    }
-
     stateLock.readLock().lock();
     try {
       checkOpennessAndMigration();
@@ -3933,14 +3758,15 @@ public abstract class AbstractStorage
       } catch (IllegalArgumentException e) {
         throw BaseException.wrapException(new RecordNotFoundException(name, rid), e, name);
       }
-      return doReadRecord(collection, rid);
+      return doReadRecord(collection, rid, atomicOperation);
     } finally {
       stateLock.readLock().unlock();
     }
   }
 
   @Override
-  public boolean recordExists(DatabaseSessionEmbedded session, RID rid) {
+  public boolean recordExists(DatabaseSessionEmbedded session, RID rid,
+      @Nonnull AtomicOperation atomicOperation) {
     if (!rid.isPersistent()) {
       throw new RecordNotFoundException(name,
           rid, "Cannot read record "
@@ -3949,19 +3775,6 @@ public abstract class AbstractStorage
           + name
           + '\'');
     }
-
-    if (transaction.get() != null) {
-      checkOpennessAndMigration();
-      final StorageCollection collection;
-      try {
-        collection = doGetAndCheckCollection(rid.getCollectionId());
-      } catch (IllegalArgumentException e) {
-        return false;
-      }
-
-      return doRecordExists(name, collection, rid);
-    }
-
     stateLock.readLock().lock();
     try {
       checkOpennessAndMigration();
@@ -3971,29 +3784,24 @@ public abstract class AbstractStorage
       } catch (IllegalArgumentException e) {
         return false;
       }
-      return doRecordExists(name, collection, rid);
+      return doRecordExists(name, collection, rid, atomicOperation);
     } finally {
       stateLock.readLock().unlock();
     }
   }
 
-  private void endStorageTx() throws IOException {
-    atomicOperationsManager.endAtomicOperation(null);
-    assert atomicOperationsManager.getCurrentOperation() == null;
+  private void endTxCommit(AtomicOperation atomicOperation) throws IOException {
+    atomicOperationsManager.endAtomicOperation(atomicOperation, null);
   }
 
-  private void startStorageTx(final FrontendTransaction clientTx) throws IOException {
-    final var storageTx = transaction.get();
-    assert storageTx == null || storageTx.clientTx().getId() == clientTx.getId();
-    assert atomicOperationsManager.getCurrentOperation() == null;
+  public AtomicOperation startStorageTx() {
+    checkOpennessAndMigration();
 
-    transaction.set(new StorageTransaction(clientTx));
-    try {
-      atomicOperationsManager.startAtomicOperation();
-    } catch (final RuntimeException e) {
-      transaction.set(null);
-      throw e;
-    }
+    return atomicOperationsManager.startAtomicOperation();
+  }
+
+  private void startTxCommit(AtomicOperation atomicOperation) {
+    atomicOperationsManager.startToApplyOperations(atomicOperation);
   }
 
   private void recoverIfNeeded() throws Exception {
@@ -4038,7 +3846,7 @@ public abstract class AbstractStorage
       final AtomicOperation atomicOperation,
       final RecordIdInternal rid,
       @Nonnull final byte[] content,
-      int recordVersion,
+      long recordVersion,
       final byte recordType,
       final StorageCollection collection,
       final PhysicalPosition allocated) {
@@ -4047,17 +3855,10 @@ public abstract class AbstractStorage
       throw new IllegalArgumentException("Record is null");
     }
 
-    if (recordVersion > -1) {
-      recordVersion++;
-    } else {
-      recordVersion = 0;
-    }
-
     collection.meters().create().record();
     PhysicalPosition ppos;
     try {
-      ppos = collection.createRecord(content, recordVersion, recordType, allocated,
-          atomicOperation);
+      ppos = collection.createRecord(content, recordType, allocated, atomicOperation);
       if (rid instanceof ChangeableRecordId changeableRecordId) {
         changeableRecordId.setCollectionPosition(ppos.collectionPosition);
       } else {
@@ -4079,19 +3880,20 @@ public abstract class AbstractStorage
     return ppos;
   }
 
-  private int doUpdateRecord(
+  private long doUpdateRecord(
       final AtomicOperation atomicOperation,
       final RecordIdInternal rid,
       final boolean updateContent,
       byte[] content,
-      final int version,
+      final long version,
       final byte recordType,
       final StorageCollection collection) {
 
     collection.meters().update().record();
     try {
       final var ppos =
-          collection.getPhysicalPosition(new PhysicalPosition(rid.getCollectionPosition()));
+          collection.getPhysicalPosition(new PhysicalPosition(rid.getCollectionPosition()),
+              atomicOperation);
 
       if (ppos == null || ppos.recordVersion != version) {
         final var dbVersion = ppos == null ? -1 : ppos.recordVersion;
@@ -4099,16 +3901,16 @@ public abstract class AbstractStorage
             name, rid, dbVersion, version, RecordOperation.UPDATED);
       }
 
-      ppos.recordVersion = version + 1;
+      final var newRecordVersion = atomicOperation.getCommitTs();
+      ppos.recordVersion = newRecordVersion;
       if (updateContent) {
         collection.updateRecord(
-            rid.getCollectionPosition(), content, ppos.recordVersion, recordType, atomicOperation);
+            rid.getCollectionPosition(), content, recordType, atomicOperation);
       } else {
-        collection.updateRecordVersion(rid.getCollectionPosition(), ppos.recordVersion,
-            atomicOperation);
+        collection.updateRecordVersion(
+            rid.getCollectionPosition(), atomicOperation);
       }
 
-      final var newRecordVersion = ppos.recordVersion;
       if (logger.isDebugEnabled()) {
         LogManager.instance()
             .debug(this, "Updated record %s v.%s size=%d", logger, rid, newRecordVersion,
@@ -4130,13 +3932,13 @@ public abstract class AbstractStorage
   private void doDeleteRecord(
       final AtomicOperation atomicOperation,
       final RecordIdInternal rid,
-      final int version,
+      final long version,
       final StorageCollection collection) {
     collection.meters().delete().record();
     try {
-
       final var ppos =
-          collection.getPhysicalPosition(new PhysicalPosition(rid.getCollectionPosition()));
+          collection.getPhysicalPosition(new PhysicalPosition(rid.getCollectionPosition()),
+              atomicOperation);
 
       if (ppos == null) {
         // ALREADY DELETED
@@ -4165,12 +3967,12 @@ public abstract class AbstractStorage
   }
 
   @Nonnull
-  private RawBuffer doReadRecord(final StorageCollection collection, final RecordIdInternal rid) {
+  private RawBuffer doReadRecord(final StorageCollection collection, final RecordIdInternal rid,
+      AtomicOperation atomicOperation) {
     collection.meters().read().record();
     try {
-
-      final var buff = collection.readRecord(rid.getCollectionPosition());
-
+      final var buff = collection.readRecord(rid.getCollectionPosition(),
+          atomicOperation);
       if (logger.isDebugEnabled()) {
         LogManager.instance()
             .debug(
@@ -4189,16 +3991,17 @@ public abstract class AbstractStorage
   }
 
   private static boolean doRecordExists(String dbName, final StorageCollection collectionSegment,
-      final RID rid) {
+      final RID rid, AtomicOperation atomicOperation) {
     try {
-      return collectionSegment.exists(rid.getCollectionPosition());
+      return collectionSegment.exists(rid.getCollectionPosition(), atomicOperation);
     } catch (final IOException e) {
       throw BaseException.wrapException(
           new StorageException(dbName, "Error during read of record with rid = " + rid), e, dbName);
     }
   }
 
-  private int createCollectionFromConfig(final StorageCollectionConfiguration config)
+  private int createCollectionFromConfig(final StorageCollectionConfiguration config,
+      AtomicOperation atomicOperation)
       throws IOException {
     var collection = collectionMap.get(config.name().toLowerCase());
 
@@ -4209,7 +4012,8 @@ public abstract class AbstractStorage
 
     collection =
         StorageCollectionFactory.createCollection(
-            config.name(), configuration.getVersion(), config.getBinaryVersion(), this);
+            config.name(), configuration.getVersion(atomicOperation), config.getBinaryVersion(),
+            this);
 
     collection.configure(this, config);
 
@@ -4284,7 +4088,7 @@ public abstract class AbstractStorage
       collection =
           StorageCollectionFactory.createCollection(
               collectionName,
-              configuration.getVersion(),
+              configuration.getVersion(atomicOperation),
               configuration
                   .getContextConfiguration()
                   .getValueAsInteger(GlobalConfiguration.STORAGE_COLLECTION_VERSION),
@@ -4327,7 +4131,7 @@ public abstract class AbstractStorage
 
       makeStorageDirty();
 
-      atomicOperationsManager.calculateInsideAtomicOperation(
+      atomicOperationsManager.executeInsideAtomicOperation(
           atomicOperation -> doSetCollectionAttributed(atomicOperation, attribute, value,
               collection));
     } catch (final RuntimeException ee) {
@@ -4341,7 +4145,7 @@ public abstract class AbstractStorage
     }
   }
 
-  private boolean doSetCollectionAttributed(
+  private void doSetCollectionAttributed(
       final AtomicOperation atomicOperation,
       final ATTRIBUTES attribute,
       final Object value,
@@ -4367,7 +4171,6 @@ public abstract class AbstractStorage
     ((CollectionBasedStorageConfiguration) configuration)
         .updateCollection(atomicOperation,
             ((PaginatedCollection) collection).generateCollectionConfig());
-    return true;
   }
 
   private boolean dropCollectionInternal(final AtomicOperation atomicOperation,
@@ -4460,9 +4263,7 @@ public abstract class AbstractStorage
 
       postCloseSteps(false, isInError(), idGen.getLastId());
 
-      transaction = null;
       migration = new CountDownLatch(1);
-
       status = STATUS.CLOSED;
     });
   }
@@ -4521,7 +4322,6 @@ public abstract class AbstractStorage
                 null);
       }
       postCloseSteps(true, isInError(), idGen.getLastId());
-      transaction = null;
       migration = new CountDownLatch(1);
       status = STATUS.CLOSED;
     } catch (final IOException e) {
@@ -4579,6 +4379,7 @@ public abstract class AbstractStorage
     final var collection = doGetAndCheckCollection(rid.getCollectionId());
 
     var db = frontendTransaction.getDatabaseSession();
+
     switch (txEntry.type) {
       case RecordOperation.CREATED: {
         final byte[] stream;
@@ -4596,15 +4397,15 @@ public abstract class AbstractStorage
         if (allocated != null) {
           final PhysicalPosition ppos;
           final var recordType = rec.getRecordType();
+          final var recordVersion = rec.getVersion() > -1 ? atomicOperation.getCommitTs() : 0;
           ppos =
               doCreateRecord(
                   atomicOperation,
                   rid,
                   stream,
-                  rec.getVersion(),
+                  recordVersion,
                   recordType,
                   collection, allocated);
-
           rec.setVersion(ppos.recordVersion);
         } else {
           final var updatedVersion =
@@ -4647,8 +4448,7 @@ public abstract class AbstractStorage
         if (rec instanceof EntityImpl entity) {
           LinkBagDeleter.deleteAllRidBags(entity, frontendTransaction);
         }
-        doDeleteRecord(atomicOperation, rid, rec.getVersionNoLoad(),
-            collection);
+        doDeleteRecord(atomicOperation, rid, rec.getVersionNoLoad(), collection);
         break;
       }
       default:
@@ -4702,10 +4502,6 @@ public abstract class AbstractStorage
       Function<String, OutputStream> ibuOutputStreamSupplier,
       final Consumer<String> ibuFileRemover);
 
-  public void restoreFromBackup(final Path backupDirectory) {
-    restoreFromBackup(backupDirectory, null);
-  }
-
   public abstract void restoreFromBackup(final Path backupDirectory, String expectedUUID);
 
   public abstract void restoreFromBackup(final Supplier<Iterator<String>> ibuFilesSupplier,
@@ -4730,6 +4526,7 @@ public abstract class AbstractStorage
     final var atLeastOnePageUpdate = new ModifiableBoolean();
 
     long recordsProcessed = 0;
+    long maxOperationUnitId = -1;
 
     final var reportBatchSize =
         GlobalConfiguration.WAL_REPORT_AFTER_OPERATIONS_DURING_RESTORE.getValueAsInteger();
@@ -4746,18 +4543,18 @@ public abstract class AbstractStorage
         for (final var walRecord : records) {
           switch (walRecord) {
             case AtomicUnitEndRecord atomicUnitEndRecord -> {
-              final var atomicUnit =
-                  operationUnits.remove(atomicUnitEndRecord.getOperationUnitId());
+              final var opId = atomicUnitEndRecord.getOperationUnitId();
+              if (opId > maxOperationUnitId) {
+                maxOperationUnitId = opId;
+              }
+              final var atomicUnit = operationUnits.remove(opId);
 
               // in case of data restore from fuzzy checkpoint part of operations may be already
               // flushed to the disk
               if (atomicUnit != null) {
                 atomicUnit.add(walRecord);
-                if (!restoreAtomicUnit(atomicUnit, atLeastOnePageUpdate)) {
-                  return lastUpdatedLSN;
-                } else {
-                  lastUpdatedLSN = walRecord.getLsn();
-                }
+                restoreAtomicUnit(atomicUnit, atLeastOnePageUpdate);
+                lastUpdatedLSN = walRecord.getLsn();
               }
             }
             case AtomicUnitStartRecord oAtomicUnitStartRecord -> {
@@ -4823,10 +4620,16 @@ public abstract class AbstractStorage
               e);
     }
 
+    // After WAL replay, synchronize idGen with the highest operationUnitId seen.
+    // This is critical after backup/restore where the idGen counter may be stale.
+    if (maxOperationUnitId >= 0 && maxOperationUnitId >= idGen.getLastId()) {
+      idGen.setStartId(maxOperationUnitId + 1);
+    }
+
     return lastUpdatedLSN;
   }
 
-  protected final boolean restoreAtomicUnit(
+  protected final void restoreAtomicUnit(
       final List<WALRecord> atomicUnit, final ModifiableBoolean atLeastOnePageUpdate)
       throws IOException {
     assert atomicUnit.getLast() instanceof AtomicUnitEndRecord;
@@ -4937,7 +4740,6 @@ public abstract class AbstractStorage
         }
       }
     }
-    return true;
   }
 
   @SuppressWarnings("unused")
@@ -4991,22 +4793,23 @@ public abstract class AbstractStorage
     return ridsPerCollection;
   }
 
-  private static void lockIndexes(final TreeMap<String, FrontendTransactionIndexChanges> indexes) {
+  private static void lockIndexes(final TreeMap<String, FrontendTransactionIndexChanges> indexes,
+      AtomicOperation atomicOperation) {
     for (final var changes : indexes.values()) {
-      changes.getIndex().acquireAtomicExclusiveLock();
+      changes.getIndex().acquireAtomicExclusiveLock(atomicOperation);
     }
   }
 
-  private static void lockCollections(final TreeMap<Integer, StorageCollection> collectionsToLock) {
+  private static void lockCollections(final TreeMap<Integer, StorageCollection> collectionsToLock,
+      AtomicOperation atomicOperation) {
     for (final var collection : collectionsToLock.values()) {
-      collection.acquireAtomicExclusiveLock();
+      collection.acquireAtomicExclusiveLock(atomicOperation);
     }
   }
 
   private void lockLinkBags(
-      final TreeMap<Integer, StorageCollection> collections) {
-    final var atomicOperation = atomicOperationsManager.getCurrentOperation();
-
+      final TreeMap<Integer, StorageCollection> collections,
+      @Nonnull AtomicOperation atomicOperation) {
     for (final var collectionId : collections.keySet()) {
       atomicOperationsManager.acquireExclusiveLockTillOperationComplete(
           atomicOperation, LinkCollectionsBTreeManagerShared.generateLockName(collectionId));
@@ -5084,11 +4887,6 @@ public abstract class AbstractStorage
     LogManager.instance()
         .error(this, "Exception `%08X` in storage `%s` : %s", exception, iAdditionalArgs);
     return exception;
-  }
-
-  @Override
-  public final StorageConfiguration getConfiguration() {
-    return configuration;
   }
 
   @Override
@@ -5282,56 +5080,6 @@ public abstract class AbstractStorage
 
       atomicOperationsManager.executeInsideAtomicOperation(
           atomicOperation -> storageConfiguration.setLocaleCountry(atomicOperation, localeCountry));
-    } catch (final RuntimeException ee) {
-      throw logAndPrepareForRethrow(ee);
-    } catch (final Error ee) {
-      throw logAndPrepareForRethrow(ee);
-    } catch (final Throwable t) {
-      throw logAndPrepareForRethrow(t);
-    } finally {
-      stateLock.readLock().unlock();
-    }
-  }
-
-  @Override
-  public final void setCollectionSelection(final String collectionSelection) {
-    stateLock.readLock().lock();
-    try {
-
-      checkOpennessAndMigration();
-
-      final var storageConfiguration =
-          (CollectionBasedStorageConfiguration) configuration;
-
-      makeStorageDirty();
-
-      atomicOperationsManager.executeInsideAtomicOperation(
-          atomicOperation ->
-              storageConfiguration.setCollectionSelection(atomicOperation, collectionSelection));
-    } catch (final RuntimeException ee) {
-      throw logAndPrepareForRethrow(ee);
-    } catch (final Error ee) {
-      throw logAndPrepareForRethrow(ee);
-    } catch (final Throwable t) {
-      throw logAndPrepareForRethrow(t);
-    } finally {
-      stateLock.readLock().unlock();
-    }
-  }
-
-  @Override
-  public final void setMinimumCollections(final int minimumCollections) {
-    stateLock.readLock().lock();
-    try {
-
-      checkOpennessAndMigration();
-
-      final var storageConfiguration =
-          (CollectionBasedStorageConfiguration) configuration;
-
-      makeStorageDirty();
-
-      storageConfiguration.setMinimumCollections(minimumCollections);
     } catch (final RuntimeException ee) {
       throw logAndPrepareForRethrow(ee);
     } catch (final Error ee) {
@@ -5572,7 +5320,15 @@ public abstract class AbstractStorage
     return this.context;
   }
 
-  public boolean isMemory() {
-    return false;
+  public void registryFrontendTransaction(FrontendTransaction transaction) {
+    transactionsTracker.put(transaction.getId(), transaction);
+  }
+
+  public void unregisterFrontendTransaction(long transactionId) {
+    transactionsTracker.remove(transactionId);
+  }
+
+  public int getActiveTransactionsCount() {
+    return transactionsTracker.size();
   }
 }
